@@ -1,0 +1,34 @@
+---
+name: "Bug report"
+about: "Create a bug report to help improve this project"
+title: "Bug report: [PLEASE DESCRIBE]"
+labels: ":bug: bug"
+assignees: ""
+---
+
+**Describe the bug**
+A clear and concise description of what the bug is.
+
+**To Reproduce**
+Steps to reproduce the behavior:
+1. Go to '...'
+2. Click on '....'
+3. Scroll down to '....'
+4. See error
+
+**Expected behavior**
+A clear and concise description of what you expected to happen.
+
+**Screenshots**
+If applicable, add screenshots to help explain your problem.
+
+**Desktop (please complete the following information):**
+ - Version [e.g. 22]
+
+
+**Shell (please complete the following information):**
+ - Type: [e.g. bash, zsh]
+ - Terminal: [e.g. native, iTerm, hyper]
+
+**Additional context**
+Add any other context about the problem here.
