@@ -1,0 +1,6 @@
+blank_issues_enabled: true
+
+contact_links:
+  - name: Email
+    url: mailto:horneds@gmail.com
+    about: Send me an email.
