@@ -1,0 +1,21 @@
+version: 2
+updates:
+
+  # Maintain dependencies for GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    labels:
+      - dependencies
+      - autosquash
+    schedule:
+      interval: "daily"
+
+  # Maintain dependencies for Python
+  - package-ecosystem: "pip"
+    directory: "/"
+    labels:
+      - dependencies
+      - autosquash
+    schedule:
+      interval: "daily"
+    open-pull-requests-limit: 10
