@@ -1,0 +1,5 @@
+# Security Policy
+
+If you discover a security issue in this repo, please contact me via horneds@gmail.com
+
+Thanks for helping make this project safe for everyone.
