@@ -7,5 +7,55 @@ tag_name = {new_version}
 message = build(version): {current_version} -> {new_version}
 
 [wheel]
-universal = 1
+python-tag = py3
 
+[metadata]
+name = peewee-migrate
+version = attr: peewee_migrate.__version__
+url = https://github.com/klen/peewee_migrate
+description = A simple migration engine for Peewee ORM
+long_description = file: README.rst
+author = Kirill Klenov
+author_email = horneds@gmail.com
+license = MIT
+license_files = LICENSE
+keywords = peewee, migrations, orm
+project_urls = 
+	Documentation = https://github.com/klen/peewee_migrate
+	Source code = https://github.com/klen/peewee_migrate
+	Issue tracker = https://github.com/klen/peewee_migrate/issues
+classifiers = 
+	Development Status :: 5 - Production/Stable
+	Intended Audience :: Developers
+	License :: OSI Approved :: MIT License
+	Programming Language :: Python
+	Programming Language :: Python :: 3
+	Programming Language :: Python :: 3.7
+	Programming Language :: Python :: 3.8
+	Programming Language :: Python :: 3.9
+        Topic :: Software Development :: Libraries :: Python Modules
+        Topic :: Utilities
+
+[options]
+packages = peewee_migrate
+python_requires = >= 3.7
+zip_safe = False
+install_requires = 
+    click   >= 6.7
+    peewee  >= 3.3.3
+
+[options.extras_require]
+tests = 
+    pytest
+    psycopg2-binary
+
+build =
+    bump2version
+    twine
+    wheel
+
+[tool:pytest]
+addopts = -xsv
+
+[pylama:tests/*]
+ignore = D
