@@ -1,24 +1,0 @@
-[tox]
-envlist=py27,py36,cov
-
-[pytest]
-addopts = -sx
-
-[pylama]
-ignore=D,C0111,C1001,W0110,W0212,W0223,R
-
-[pylama:tests/migrations/*.py]
-ignore=W0611,W0612
-
-[testenv]
-commands=py.test
-deps = -rrequirements-tests.txt
-
-[testenv:cov]
-deps =
-    coverage
-    {[testenv]deps}
-
-commands =
-    coverage run -m py.test
-    coverage report
